# gaap

./: .gitignore  .goreleaser.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  capability.go  capability_test.go  circuit_breaker.go  circuit_breaker_integration_test.go  circuit_breaker_test.go  dag.go  dag_test.go  decomposer.go  decomposer_llm.go  decomposer_llm_test.go  decomposer_test.go  go.mod  go.sum  orchestrator.go  orchestrator_daemon_test.go  orchestrator_integration_test.go  orchestrator_test.go  pyproject.toml  states.go  states_test.go  subscription_test.go  synthesis.go  synthesis_benchmark_test.go  synthesis_engine_test.go  synthesis_impl.go  synthesis_schema_test.go  test_helpers_test.go
.github/workflows/: ci.yml
cmd/gaap/: main.go  main_test.go
docs/design/: multi-agent-orchestration.md  orchestrator-patterns.md
internal/ollama/: ollama.go  ollama_test.go
internal/worker/: executor.go  executor_test.go  pool.go  pool_test.go
src/gaap/: __init__.py
