[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gaap"
version = "0.1.0"
description = "Model-agnostic multi-agent orchestrator on the blackboard pattern"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Gaap Contributors" },
]
keywords = ["ai", "agent", "multi-agent", "orchestration", "blackboard", "vassago"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "grpcio>=1.60",
    "protobuf>=4.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/aj-nt/gaap"
Repository = "https://github.com/aj-nt/gaap.git"
Issues = "https://github.com/aj-nt/gaap/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/gaap"]
